--- a/CMakeLIsts.txt
+++ b/CMakeLIsts.txt
@@ -1,10 +1,18 @@
-cmake_minimum_required(VERSION 3.10) # Specify the minimum required CMake version
+cmake_minimum_required(VERSION 3.10)
 
-project(MyCppProject VERSION 1.0) # Define your project name and version
+project(TrajectoryTableGenerator VERSION 1.0 LANGUAGES CXX)
 
-# Set the C++ standard to use (e.g., C++17, C++20)
+set(SOURCES
+    src/main.cpp
+    src/calc_functions.cpp
+)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add an executable target
-add_executable(MyCppProject main.cpp) # Create an executable named MyCppProject from main.cpp
+add_executable(TrajectoryTableGenerator ${SOURCES}) 
+
+target_include_directories(TrajectoryTableGenerator PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
